env/code_53e595166a189/stderr.txt
  File "main.py", line 4
    os.exec("touch index.html")
          ^
SyntaxError: invalid syntax
